added Transaction module

--- a/src/test/resource/ProjectData.properties
+++ b/src/test/resource/ProjectData.properties
@@ -6,5 +6,7 @@ password=vguard@123
 invalidPassword=invalidPassword
 phoneNumber=1234567890
 deactivatedEmail=deactive@gmail.com
+loginPageURL=https://vguard-bt-stg.esealcom.com/login
+homePageURL=https://vguard-bt-stg.esealcom.com/admin/home
 usersPageURL=https://vguard-bt-stg.esealcom.com/admin/authorization/users
 
